--- a/.github/workflows/update_sources.yaml
+++ b/.github/workflows/update_sources.yaml
@@ -8,7 +8,7 @@ on:
         required: true
         default: 'dev'
   schedule:
-  - cron: "0 */2 * * *"
+  - cron: "0 8-22/2 * * 1-5"
 
 concurrency:
   group: soucre-update-${{ inputs.target_branch }}
