Update workflow in dev
Signed-off-by: David Cassany <dcassany@suse.com>

--- a/.obs/workflows.yml
+++ b/.obs/workflows.yml
@@ -1,10 +1,10 @@
-sync:
+sync-dev:
   steps:
   - trigger_services:
-      project: home:dcassany:Elementalgit
+      project: isv:Rancher:Elemental:Devgit
       package: _project
   filters:
     branches:
       only:
-      - dev
+        - dev
     event: push
