Add cluster-api repository
Signed-off-by: David Cassany <dcassany@suse.com>

--- a/config.yaml
+++ b/config.yaml
@@ -14,6 +14,10 @@ dev:
   branch: gitified
   parseVersion: patch
   versionOffset: no
+- repo: rancher-sandbox/cluster-api-provider-elemental
+  branch: gitified
+  parseVersion: patch
+  versionOffset: no
 - repo: rancher/elemental-channels
   branch: gitified
   parseVersion: none
