Update OBS workflow to Dev
Signed-off-by: David Cassany <dcassany@suse.com>

--- a/.obs/workflows.yml
+++ b/.obs/workflows.yml
@@ -1,7 +1,7 @@
 sync-dev:
   steps:
     - trigger_services:
-        project: isv:Rancher:Elemental:Devgit
+        project: isv:Rancher:Elemental:Dev
         package: _project
   filters:
     event: push
