--- a/config.yaml
+++ b/config.yaml
@@ -22,3 +22,25 @@ dev:
   branch: main
   parseVersion: none
   versionOffset: no
+
+staging:
+- repo: rancher/elemental-toolkit
+  branch: v2.2.x
+  parseVersion: patch
+  versionOffset: no
+- repo: rancher/elemental-operator
+  branch: v1.7.x
+  parseVersion: patch
+  versionOffset: no
+- repo: rancher/elemental
+  branch: v2.2.x
+  parseVersion: patch
+  versionOffset: no
+- repo: rancher-sandbox/cluster-api-provider-elemental
+  branch: main
+  parseVersion: patch
+  versionOffset: no
+- repo: rancher/elemental-channels
+  branch: main
+  parseVersion: none
+  versionOffset: no
