Pull channel values form the appropriate branch
Signed-off-by: David Cassany <dcassany@suse.com>

--- a/config.yaml
+++ b/config.yaml
@@ -41,6 +41,6 @@ staging:
   parseVersion: patch
   versionOffset: no
 - repo: rancher/elemental-channels
-  branch: main
+  branch: v1.7
   parseVersion: none
   versionOffset: no
