Fix matrix setup for dispatched workflows
Signed-off-by: David Cassany <dcassany@suse.com>

--- a/.github/workflows/update_sources.yaml
+++ b/.github/workflows/update_sources.yaml
@@ -50,7 +50,7 @@ jobs:
           if [[ "${{ env.SRC_REPOS }}" != "all" ]] && [[ "${{ env.SRC_REPOS }}" != "${repo}" ]]; then
             continue
           fi
-          if (( ${n} == 0 )); then
+          if [[ "${output}" == "repos=[" ]]; then
             output+="'${repo}'"
           else
             output+=", '${repo}'"
