Align channel image with the channel released for v1.6
Signed-off-by: David Cassany <dcassany@suse.com>

--- a/elemental-channel-image/Dockerfile.sl-micro-61-base
+++ b/elemental-channel-image/Dockerfile.sl-micro-61-base
@@ -3,9 +3,8 @@
 #!BuildTag: rancher/elemental-channel/sl-micro:6.1-base-%RELEASE%
 #!UseOBSRepositories
 
-ARG SLMICRO_VERSION
 
-FROM suse/sl-micro/${SLMICRO_VERSION}/toolbox:latest as toolbox
+FROM suse/sl-micro/6.1/toolbox:latest as toolbox
 
 # Prepare a busybox base
 RUN mkdir -p /busybox && rpm --initdb --root /busybox
