Switch from staging to maintenance 6.2
This commit drops the setup for 'dev' brancha is this is no
longer in use and switches from 'staging' to the new 'maintenance_6.2'
branch.

Signed-off-by: David Cassany <dcassany@suse.com>

--- a/.github/workflows/update_sources.yaml
+++ b/.github/workflows/update_sources.yaml
@@ -6,7 +6,7 @@ on:
       target_branch:
         description: 'Target branch to upgrade in OBS'
         required: true
-        default: 'dev'
+        default: 'maintenance_6.2'
       source_repositories:
         description: 'Source repositories to upgrade from'
         required: true
